--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-tooltip": "^5.11.1",
     "typescript": "5.0.4"
   },
