--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# prisma orm
+/prisma/migrations
+/prisma/dev.db 
+/prisma/dev.db-journal
