--- a/.env
+++ b/.env
@@ -4,4 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+# SQLite
+# DATABASE_URL="file:./dev.db"
+
+# MySQL
+# DATABASE_URL="mysql://VampireTheMasquerade:VampireTheMasqueradeBdD@localhost:3306/vtm"
+DATABASE_URL="mysql://root:@localhost:3306/vtm"
