JWT auth in API

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@
 # MySQL
 # DATABASE_URL="mysql://VampireTheMasquerade:VampireTheMasqueradeBdD@localhost:3306/vtm"
 DATABASE_URL="mysql://root:@localhost:3306/vtm"
+
+# JWT
+ACCESS_TOKEN_SECRET="VampireTheMasquerade"
