--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.4",
     "prisma": "^4.14.1",
     "react": "18.2.0",
@@ -28,6 +29,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "sass": "^1.62.1"
   }
 }
