--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "jsonwebtoken": "^9.0.0",
@@ -29,6 +30,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.2",
     "sass": "^1.62.1"
   }
