--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://USERNAME:@HOST:PORT/DATABASE"
+DATABASE_URL="mysql://USERNAME:PASSWORD@HOST:PORT/DATABASE"
 
 ACCESS_TOKEN_SECRET="SECRET"
 
