--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.3.4",
     "prisma": "^4.14.1",
     "react": "18.2.0",
